--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ ul li label {
 }
 
 button {
-  background-color: #8e44ad;
+  background-color: red;
   color: #fff;
   border: none;
   display: block;
